# Hypnos-Core-CPlus

./: .gitignore  CMakeLists.txt  README.md
Runtime/: Allocator.hpp  CMakeLists.txt  Cache.hpp  Container.hpp  Delegate.hpp  Encoding.hpp  IO.hpp  PortableDefinition.hpp  Thread.hpp  Type.hpp
Runtime/Cache/: ObjectPool.hpp
Runtime/Container/: Array.hpp  DLinkedList.hpp  Map.hpp  SLinkedList.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp
Runtime/Encoding/: Base128Varints.hpp  ZigZag.hpp
Runtime/IO/: BinaryReader.hpp  BinaryWriter.hpp
